# BattleBots

./: .gitignore  CMakeLists.txt
AdditionalCode/Host/: udpForwarder.c
AdditionalCode/RaspberryPi/: BattleBot.py
app/: CMakeLists.txt
app/include/: bot.h  bot_controller.h  network.h  oled.h  rpiCommunication.h
app/src/: bot.c  bot_controller.c  findRPIs.c  main.c  network.c  oled.c  rpiCommunication.c  test_controller.c  test_network.c
hal/: CMakeLists.txt
hal/include/hal/: controller.h  findRPIs.c
hal/src/: controller.c
ssd1306_linux/: linux_i2c.d  main.d  ssd1306.d  ssd1306_bin
web/: package-lock.json  package.json  server.js
web/public/: index.html
